# MyH3C

./: CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  main.c  myh3c.c  myh3c.h
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
lib/: daemon.c  daemon.h
lib/mtl/: allocator.c  allocator.h  array.c  array.h  stack.h
lib/shortcuts/: shortcuts.h  struct.h
src/: Makefile  Makefile.am  Makefile.in  main.c  main.cc  myh3c.c  myh3c.cc  myh3c.h  user.cc  user.h
src/.deps/: daemon.Po  struct.Po  user.Po
src/lib/: daemon.c  daemon.h
src/lib/shortcuts/: shortcuts.h  struct.c  tmpl.h
src/user/: user.c
user/: user.c  user.h
