#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(MyH3C, 2.0, shibuyanorailgun@gmail.com)
# AC_CONFIG_SRCDIR([src/myh3c.h])
# AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
# AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lpthread':
# AC_CHECK_LIB([pthread], [main])
# FIXME: Replace `main' with a function in `-lutils':
# AC_CHECK_LIB([utils], [main])

# Checks for header files.
# AC_CHECK_HEADERS([arpa/inet.h stddef.h stdlib.h string.h sys/ioctl.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
# AC_TYPE_SIZE_T
# AC_TYPE_UINT16_T
# AC_TYPE_UINT8_T

# Checks for library functions.
# AC_CHECK_FUNCS([memset socket])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
